# ai-passport

./: .env.examlpe  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ai_harm_reporting.excalidraw  start-benchmark.sh  start-infra.sh  start-proxy.sh
.github/workflows/: publish_release.yml  rust.yml
agent/: Cargo.toml
agent/src/: cli.rs  decision.rs  main.rs  market_data.rs  model.rs
agent/src/core/: input_source.rs  mod.rs  output.rs  prompt.rs
agent/src/polymarket/: agent_msg.rs  fetch.rs  mod.rs
agent/src/portfolio/: fetch.rs  mod.rs
agent/src/portfolio/price_feed/: coingeko.rs  context.rs  enrich.rs  mod.rs
agent/src/tools/: coingecko.rs  mod.rs  polymarket.rs  portfolio.rs
agent/src/utils/: logging.rs  mod.rs  notary_config.rs  proxy_client.rs  serialization.rs
benches/: latency.sh  latency_bench.sh  prove_bench.rs
cli/: Cargo.toml
cli/benches/: bandwidth_bench.sh  measure_raw_api.sh  prove_bench.rs
cli/scripts/: analyze_benchmarks.py
cli/src/: app.rs  args.rs  cli.rs  lib.rs  utils.rs
cli/src/config/: mod.rs  notary.rs  privacy.rs  prove.rs  select_proof_path.rs  verify.rs
cli/src/config/load/: api_domain.rs  api_key.rs  api_port.rs  mod.rs  model_id.rs  proof_path.rs
cli/src/prove/: live_interact.rs  mod.rs  multi.rs  multi_round.rs  one_shot.rs  setup.rs  share.rs  single.rs
cli/src/prover/: capacity.rs  direct.rs  mod.rs  proxy.rs  tls_per_message.rs  tls_single_shot.rs
cli/src/providers/: anthropic.rs  budget.rs  custom.rs  fireworks.rs  interaction.rs  message.rs  mistral.rs  mod.rs  redpill.rs  unknown.rs
cli/src/tlsn/: mod.rs  notarise.rs  save_proof.rs  setup.rs
cli/src/ui/: io_input.rs  mod.rs  spinner.rs  user_messages.rs
cli/src/utils/: io_input.rs
model-server/: Cargo.toml
model-server/src/: config.rs  handlers.rs  main.rs  middleware.rs  response.rs  tls.rs  types.rs
notary/: Cargo.toml  config.yaml
notary/src/: main.rs
proxy-server/: Cargo.toml
proxy-server/src/: lib.rs  main.rs  proxy.rs  transcript.rs
scripts/: agent-benchmark.sh  generate_id.sh  prove.sh  start-benchmark.sh  start-infra.sh  verify.sh
src/: app.rs  args.rs  lib.rs  verify.rs
src/config/: load_api_domain.rs  load_api_key.rs  mod.rs  select_model.rs  select_proof_path.rs
src/local/: create_model_passport.rs  ezkl.rs  mod.rs  prove_attribution.rs  verify_attribution.rs
src/prove/: live_interact.rs  mod.rs  model_interactions.rs  multi_round.rs  notarise.rs  one_shot.rs  setup.rs  setup_notary.rs  share.rs  store.rs
src/remote/: claud_conversation_attribution.rs  mod.rs  verify_attribution.rs
src/remote/attribution/: mod.rs  setup_notary.rs  tlsn_operations.rs
src/remote/attribution/config/: load_api_domain.rs  load_api_key.rs  mod.rs  model_selection.rs  select_model.rs
src/utils/: io_input.rs
tlsn/: ephemeral_notary.key  ephemeral_notary.pub
