[package]
name = "passport-for-ai"
version = "0.2.0"
edition = "2021"
default-run = "passport-for-ai"

[lib]
name = "passport_for_ai"

[dependencies]
# --- CLI & Config ---
clap = { version = "4.0", features = ["derive", "env"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenvy = { version = "0.15.7" }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Async Runtime & Utilities ---
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }

# --- Time & Data ---
chrono = { version = "0.4", features = ["alloc", "now"], default-features = false }

# --- Crypto ---
k256 = { version = "0.13" }

# --- Networking (HTTP) ---
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = { version = "0.1" }
hyper-tls = { version = "0.6" }

# --- TLSNotary stack ---
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663" }

# --- Logging ---
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# --- Miscellaneous ---
anyhow = "1.0"
derive_builder = { version = "0.20.2" }


[features]
dummy-notary = []

[[bin]]
name = "passport-for-ai"
path = "src/bin/passport_for_ai.rs"