[workspace]
members = ["agent",
    "cli",
    "model-server",
    "notary",
]
resolver = "2"

[workspace.package]
edition = "2021"

# One source of truth for versions & common features
[workspace.dependencies]
# --- Core & utils ---
anyhow = "1"
derive_builder = "0.20.2"
hex = "0.4.3"
dotenvy = "0.15.7"
regex = "1"
strum = { version = "0.26", features = ["derive"] }

# --- CLI & UX ---
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.18.0"

# --- Async ---
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
futures = "0.3"

# --- Time & data ---
chrono = { version = "0.4", features = ["alloc", "now", "serde"], default-features = false }

# --- Serde ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- Crypto ---
k256 = "0.13"

# --- HTTP client stack (passport-for-ai) ---
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http1", "native-tokio"] }

# --- TLSNotary (git) ---
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663" }

# --- Server stack (dummy-model-server) ---
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

## -- Direct Prover requirments --
tokio-rustls = "0.26"
webpki-roots = "0.26"

# --- Dev ---
criterion = "0.7.0"
rand = "0.9.1"
uuid = { version = "1", features = ["v4"] }
subtle = "2.6.1"
time = "0.3"
