[package]
name = "agent"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4.41"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

ai-passport = { path = "../cli" }

# --- Logging ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- Networking (HTTP) ---
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli", "deflate"] }