[package]
name = "agent"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4.41"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }

ai-passport = { path = "../cli" }

# --- Logging ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- Networking (HTTP) ---
# Direct HTTP client (for non-attested requests)
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli", "deflate"] }
async-trait = "0.1.88"

# Proxy client dependencies (for attested requests)
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }