[package]
name = "ai-passport"
version = "0.2.0"
edition.workspace = true
default-run = "cli"

[lib]
name = "ai_passport"

[dependencies]
# --- CLI & Config ---
clap = { workspace = true }
dialoguer = { workspace = true }
dotenvy = { workspace = true }
indicatif = { workspace = true }

# --- Serialization ---
serde = { workspace = true }
serde_json = { workspace = true }

# --- Async Runtime & Utilities ---
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# --- Time & Data ---
chrono = { workspace = true }

# --- Crypto ---
k256 = { workspace = true }

# --- Networking (HTTP) ---
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }

# --- TLSNotary stack ---
tlsn-core = { workspace = true }
tlsn-prover = { workspace = true }
tlsn-verifier = { workspace = true }
tlsn-formats = { workspace = true }
tlsn-common = { workspace = true }
notary-client = { workspace = true }
spansy = { workspace = true }

# --- Logging ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- Misc ---
anyhow = { workspace = true }
derive_builder = { workspace = true }
enum_dispatch = "0.3"
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[features]
ephemeral-notary = []

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bench]]
name = "prove_bench"
harness = false