[package]
name = "proxy-server"
version = "0.1.0"
edition = "2021"
description = "Attestation proxy server for AI Passport"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }

# HTTP
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Signing
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
hex = "0.4"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"
